--- a/profile.html
+++ b/profile.html
@@ -11,12 +11,19 @@
 <body>
     <header>
         <nav class="box-border max-w-screen-sm px-8 py-5 mx-auto">
-            <h1 class="font-semibold text-white">Akun Saya
-            </h1>
+            <a href="" class="flex items-center gap-2">
+                <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M5.30587 10.4019L10.8618 16.0093L8.9172 18L0 9L8.9172 0L10.8618 1.99065L5.30587 7.59813H27.5294V10.4019H5.30587Z"
+                        fill="white" />
+                </svg>
+                <h1 class="font-semibold text-white">Profile
+                </h1>
+            </a>
         </nav>
     </header>
 
-    <main class="max-w-screen-sm min-h-screen mx-auto">
+    <main class="max-w-screen-sm min-h-screen pb-5 mx-auto bg-white">
         <section class="flex flex-col bg-primary">
             <div class="flex items-center justify-center gap-5 px-8 py-12 text-white">
                 <svg width="139" height="139" viewBox="0 0 139 139" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -25,7 +32,7 @@
                         fill="white" />
                 </svg>
             </div>
-            <div class="flex flex-col p-8 gap-24 bg-white rounded-t-[50px]">
+            <div class="flex flex-col p-8 bg-white rounded-t-[50px]">
                 <div class="flex flex-col gap-5">
                     <div class="flex flex-col">
                         <div class="flex gap-4">
@@ -95,46 +102,18 @@
                         <p>Informasi berikut hanya dapat dilihat oleh kamu dan tidak akan kami publikasikan</p>
                     </div>
                 </div>
-                <div class="flex flex-col gap-5">
-                    <div class="px-6 py-4 text-lg font-semibold text-center text-white rounded-full bg-[#FE9AA0]">
-                        <button>Edit Profile</button>
-                    </div>
-                    <h1 class="text-center text-primary">KitaBantu. v.1.0</h1>
-                </div>
-
             </div>
         </section>
     </main>
 
     <nav class="sticky bottom-0 max-w-screen-sm px-8 py-3 mx-auto bg-white">
-        <ul class="grid grid-cols-3 gap-2 p-2 bg-white rounded-full shadow-lg border-slate-100 text-primary">
-            <li class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-primary">
-                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z"
-                        fill="#B8B8B8" />
-                </svg>
-                Home
-            </li>
-            <li class="flex items-center justify-center gap-2 text-sm text-primary sm:border-slate-200 sm:border-x-2">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M14 3.78947V5.68421H4V3.78947H14ZM12 7.57895V9.47368H4V7.57895H12ZM15 16.1053L18 18V0H0V18L3 16.1053L6 18L9 16.1053L12 18L15 16.1053ZM16 1.89474V14.4568L15 13.8316L12 15.7263L9 13.8316L6 15.7263L3 13.8316L2 14.4568V1.89474H16Z"
-                        fill="#B8B8B8" />
-                </svg>
-                Riwayat
-            </li>
-            <li class="flex items-center justify-center gap-2 text-sm text-white rounded-full bg-primary">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M9 0C10.1935 0 11.3381 0.474106 12.182 1.31802C13.0259 2.16193 13.5 3.30653 13.5 4.5C13.5 5.69347 13.0259 6.83807 12.182 7.68198C11.3381 8.52589 10.1935 9 9 9C7.80653 9 6.66193 8.52589 5.81802 7.68198C4.97411 6.83807 4.5 5.69347 4.5 4.5C4.5 3.30653 4.97411 2.16193 5.81802 1.31802C6.66193 0.474106 7.80653 0 9 0ZM9 11.25C13.9725 11.25 18 13.2638 18 15.75V18H0V15.75C0 13.2638 4.0275 11.25 9 11.25Z"
-                        fill="white" />
-                </svg>
-                Akun
-            </li>
-        </ul>
+        <div class="flex flex-col gap-5">
+            <div class="px-4 py-2 text-lg font-semibold text-center text-white rounded-full bg-[#FE9AA0]">
+                <button>Edit Profile</button>
+            </div>
+            <p class="text-center text-primary">KitaBantu. v.1.0</p>
+        </div>
     </nav>
-
 </body>
 
 </html>
